--- a/order.html
+++ b/order.html
@@ -5,23 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>TopClean Takarító Szolgálat</title>
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=b3d479c01fe33ee7d303b87f2b55c218">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=b3d479c01fe33ee7d303b87f2b55c218">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="/assets/css/about.css?h=c9a0d441963f061fafeb33ab212194ac">
-    <link rel="stylesheet" href="/assets/css/buttons.css?h=5b601085c468d0cefe6c4c52d9c5ccc3">
-    <link rel="stylesheet" href="/assets/css/contact.css?h=2266fbab5bc636cc05b2ee83cd749d1c">
-    <link rel="stylesheet" href="/assets/css/hero.css?h=68b7bce5b8a8da1ed30cf2ae216a083e">
-    <link rel="stylesheet" href="/https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-    <link rel="stylesheet" href="/assets/css/icons.css?h=b0aa3606f71b84002ef96ecd9aa5fc4a">
-    <link rel="stylesheet" href="/assets/css/nav.css?h=56318e9a3a9ff923fb040434240cd519">
-    <link rel="stylesheet" href="/assets/css/order.css?h=0527767ee337314b461ff9b573b62a75">
-    <link rel="stylesheet" href="/assets/css/services.css?h=97b7fc39490153f2d32ef0e67fc97329">
-    <link rel="stylesheet" href="/assets/css/styles.css?h=f3adb8aed873befa1efadf9a21305e56">
-    <link rel="stylesheet" href="/assets/css/typo.css?h=ba65a2b1f86cfd50e69fc275f161b698">
-    <link rel="stylesheet" href="/assets/css/works.css?h=64b4d2cb2a9e7b776d90e9d99dd8faf1">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="assets/css/about.css?h=c9a0d441963f061fafeb33ab212194ac">
+    <link rel="stylesheet" href="assets/css/buttons.css?h=5b601085c468d0cefe6c4c52d9c5ccc3">
+    <link rel="stylesheet" href="assets/css/contact.css?h=2266fbab5bc636cc05b2ee83cd749d1c">
+    <link rel="stylesheet" href="assets/css/hero.css?h=68b7bce5b8a8da1ed30cf2ae216a083e">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="assets/css/icons.css?h=b0aa3606f71b84002ef96ecd9aa5fc4a">
+    <link rel="stylesheet" href="assets/css/nav.css?h=56318e9a3a9ff923fb040434240cd519">
+    <link rel="stylesheet" href="assets/css/order.css?h=0527767ee337314b461ff9b573b62a75">
+    <link rel="stylesheet" href="assets/css/services.css?h=97b7fc39490153f2d32ef0e67fc97329">
+    <link rel="stylesheet" href="assets/css/styles.css?h=f3adb8aed873befa1efadf9a21305e56">
+    <link rel="stylesheet" href="assets/css/typo.css?h=ba65a2b1f86cfd50e69fc275f161b698">
+    <link rel="stylesheet" href="assets/css/works.css?h=64b4d2cb2a9e7b776d90e9d99dd8faf1">
 </head>
 
 <body>
@@ -103,11 +103,11 @@
             </div>
         </div>
     </footer>
-    <script src="/assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
-    <script src="/assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
-    <script src="/assets/js/bs-animation.js?h=cc4d20340936b09bec81533dd59db3a8"></script>
+    <script src="assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
+    <script src="assets/js/bs-animation.js?h=cc4d20340936b09bec81533dd59db3a8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-    <script src="/assets/js/main.js?h=0c07aa4668616427cbdb3510f4816e83"></script>
+    <script src="assets/js/main.js?h=0c07aa4668616427cbdb3510f4816e83"></script>
 </body>
 
 </html>
