--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>TopClean Takarító Szolgálat</title>
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=b3d479c01fe33ee7d303b87f2b55c218">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=b3d479c01fe33ee7d303b87f2b55c218">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="/assets/css/about.css?h=c9a0d441963f061fafeb33ab212194ac">
-    <link rel="stylesheet" href="/assets/css/buttons.css?h=5b601085c468d0cefe6c4c52d9c5ccc3">
-    <link rel="stylesheet" href="/assets/css/contact.css?h=2266fbab5bc636cc05b2ee83cd749d1c">
-    <link rel="stylesheet" href="/assets/css/hero.css?h=68b7bce5b8a8da1ed30cf2ae216a083e">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="assets/css/about.css?h=c9a0d441963f061fafeb33ab212194ac">
+    <link rel="stylesheet" href="assets/css/buttons.css?h=5b601085c468d0cefe6c4c52d9c5ccc3">
+    <link rel="stylesheet" href="assets/css/contact.css?h=2266fbab5bc636cc05b2ee83cd749d1c">
+    <link rel="stylesheet" href="assets/css/hero.css?h=68b7bce5b8a8da1ed30cf2ae216a083e">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-    <link rel="stylesheet" href="/assets/css/icons.css?h=b0aa3606f71b84002ef96ecd9aa5fc4a">
-    <link rel="stylesheet" href="/assets/css/nav.css?h=56318e9a3a9ff923fb040434240cd519">
-    <link rel="stylesheet" href="/assets/css/order.css?h=0527767ee337314b461ff9b573b62a75">
-    <link rel="stylesheet" href="/assets/css/services.css?h=97b7fc39490153f2d32ef0e67fc97329">
-    <link rel="stylesheet" href="/assets/css/styles.css?h=f3adb8aed873befa1efadf9a21305e56">
-    <link rel="stylesheet" href="/assets/css/typo.css?h=ba65a2b1f86cfd50e69fc275f161b698">
-    <link rel="stylesheet" href="/assets/css/works.css?h=64b4d2cb2a9e7b776d90e9d99dd8faf1">
+    <link rel="stylesheet" href="assets/css/icons.css?h=b0aa3606f71b84002ef96ecd9aa5fc4a">
+    <link rel="stylesheet" href="assets/css/nav.css?h=56318e9a3a9ff923fb040434240cd519">
+    <link rel="stylesheet" href="assets/css/order.css?h=0527767ee337314b461ff9b573b62a75">
+    <link rel="stylesheet" href="assets/css/services.css?h=97b7fc39490153f2d32ef0e67fc97329">
+    <link rel="stylesheet" href="assets/css/styles.css?h=f3adb8aed873befa1efadf9a21305e56">
+    <link rel="stylesheet" href="assets/css/typo.css?h=ba65a2b1f86cfd50e69fc275f161b698">
+    <link rel="stylesheet" href="assets/css/works.css?h=64b4d2cb2a9e7b776d90e9d99dd8faf1">
 </head>
 
 <body data-spy="scroll" data-offset="50">
@@ -126,7 +126,7 @@
   </svg>
 </a></div>
             <div class="col-12 col-sm-12 col-lg-6 order-lg-2 order-xl-2" data-aos="fade-left" data-aos-duration="400"
-                data-aos-delay="100"><img src="/assets/img/service-circle-4.png?h=2bbc87eaef209861cd565ffdbee1a78b"></div>
+                data-aos-delay="100"><img src="assets/img/service-circle-4.png?h=2bbc87eaef209861cd565ffdbee1a78b"></div>
         </div>
         </div>
     </section>
@@ -147,7 +147,7 @@
 	  </div>
 	  <div class="carousel-item text-center">
 		<div class="carousel-testimonial-img p-1 m-auto">
-		  <img class="d-block w-100 rounded-circle" src="/assets/img/testim-2.png?h=b6f2ddf3783abc1920ca42ca7a72c40e" alt="Second slide">
+		  <img class="d-block w-100 rounded-circle" src="assets/img/testim-2.png?h=b6f2ddf3783abc1920ca42ca7a72c40e" alt="Second slide">
 		</div>
 		<h5 class="mt-4 mb-0"><strong class="blue-text text-uppercase">Jakab Emőke</strong></h5>
 		<h6 class="text-dark m-0">Orion Kávézó</h6>
@@ -155,7 +155,7 @@
 	  </div>
 	  <div class="carousel-item text-center">
 		<div class="carousel-testimonial-img p-1 m-auto">
-		  <img class="d-block w-100 rounded-circle" src="/assets/img/testim-3.png?h=f629343f447bf4c5f92afb4779c78439" alt="Third slide">
+		  <img class="d-block w-100 rounded-circle" src="assets/img/testim-3.png?h=f629343f447bf4c5f92afb4779c78439" alt="Third slide">
 		</div>
 		<h5 class="mt-4 mb-0"><strong class="blue-text text-uppercase">Kiss Luca</strong></h5>
 		<h6 class="text-dark m-0">Fix Iroda</h6>
@@ -194,11 +194,11 @@
             </div>
             <p class="text-center mt-3">TopCleaning Service © 2019<br></p><span class="scrollToTop"><i class="fa fa-chevron-circle-up"></i></span></div>
     </footer>
-    <script src="/assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
-    <script src="/assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
-    <script src="/assets/js/bs-animation.js?h=cc4d20340936b09bec81533dd59db3a8"></script>
+    <script src="assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
+    <script src="assets/js/bs-animation.js?h=cc4d20340936b09bec81533dd59db3a8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-    <script src="/assets/js/main.js?h=0c07aa4668616427cbdb3510f4816e83"></script>
+    <script src="assets/js/main.js?h=0c07aa4668616427cbdb3510f4816e83"></script>
 </body>
 
 </html>
