update social medai links

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         class="mb-1">Ügyfélszolgálat: 8-16 óráig</p>
                 </div>
                 <div class="col-sm-12 col-lg-6 text-center text-lg-right mt-3 mt-md-0">
-                    <h3 class="pb-2">Közösségi média</h3><a href="facebook.com"><i class="fa fa-facebook-square mr-3"></i></a><a href="instagram.com"><i class="fa fa-instagram mr-3"></i></a><a href="pinterest.com"><i class="fa fa-pinterest mr-3"></i></a><a href="twitter.com"><i class="fa fa-twitter-square"></i></a></div>
+                    <h3 class="pb-2">Közösségi média</h3><a href="#"><i class="fa fa-facebook-square mr-3"></i></a><a href="#"><i class="fa fa-instagram mr-3"></i></a><a href="#"><i class="fa fa-pinterest mr-3"></i></a><a href="#"><i class="fa fa-twitter-square"></i></a></div>
             </div>
             <p class="text-center mt-3">TopCleaning Service © 2019<br></p><span class="scrollToTop"><i class="fa fa-chevron-circle-up"></i></span></div>
     </footer>
